--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "udev": ">=0.4.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "eslint": "^5.4.0",
+    "eslint-config-get-off-my-lawn": "^4.0.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint:js": "eslint ./client/src --ext .js --fix"
   },
   "repository": {
     "type": "git",
