--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,80 @@
   "private": true,
   "proxy": "http://localhost:11337/",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.3",
-    "jquery": "^3.2.1",
     "prop-types": "^15.6.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "reactstrap": "^5.0.0-alpha.4",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "whatwg-fetch": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.1",
+    "eslint-config-get-off-my-lawn": "^3.0.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "http": "0.0.0",
+    "jest": "^23.5.0",
+    "jest-fetch-mock": "^1.4.4",
+    "jquery": "^3.3.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "0.8.5",
+    "reactstrap": "^6.4.0",
+    "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^2.0.12"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "prebuild:dev": "rimraf ./dist",
+    "build": "yarn webpack",
+    "build:dev": "yarn webpack:dev",
+    "webpack": "webpack --mode=production",
+    "webpack:dev": "webpack --mode=development",
+    "start:dev": "nodemon -e js,css,html --watch src/ --exec 'yarn start:localdev'",
+    "prestart:localdev": "yarn build:dev",
+    "start:localdev": "yarn start",
+    "lint:js": "eslint ./src ./tests ./config --ext .js --fix",
+    "test": "yarn coverage",
+    "posttest": "yarn lint:js",
+    "unit": "jest",
+    "coverage": "jest --coverage"
+  },
+  "jest": {
+    "setupFiles": [
+      "./tests/setupJest.js"
+    ],
+    "coverageDirectory": ".coverage",
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js}",
+      "!src/index.js",
+      "!**/responses/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
